# MeterFlow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  permissions.py  serializers.py  services.py  views.py
backend/core/management/commands/: seedtestdata.py
backend/core/migrations/: 0002_profile.py
backend/core/tests/: conftest.py  test_api.py  test_config.py  test_fuzzing.py  test_models.py  test_serializers.py  test_services.py
docs/: architecture.md  fuzzing.md  quality.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  safety.ts  setupTests.ts
frontend/src/__tests__/: AnalyticsPage.test.tsx  Api.test.ts  AppNavigation.test.tsx  AuthPage.test.tsx  Dashboard.test.tsx  ErrorBoundary.test.tsx  Footer.test.tsx  Fuzzing.test.tsx  MetersPage.test.tsx  PropertiesPage.test.tsx  ReadingsPage.test.tsx
frontend/src/components/: ErrorBoundary.tsx  Footer.tsx
frontend/src/pages/: AnalyticsPage.tsx  AuthPage.tsx  Dashboard.tsx  MetersPage.tsx  PropertiesPage.tsx  ReadingsPage.tsx
