[project]
name = "meterflow-backend"
version = "0.1.0"
description = "Django REST API for MeterFlow"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8,<6.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-cors-headers>=4.9.0",
    "psycopg2-binary==2.9.10",
]

[dependency-groups]
dev = [
    "hypothesis>=6.124.0",
    "pytest>=8.3.4",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.9.0",
]
